tests/baselines/reference/parserGenericsInTypeContexts1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,17): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,19): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,33): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,35): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(4,9): error TS2315: Type 'C' is not generic.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(4,11): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(5,9): error TS2304: Cannot find name 'D'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(5,11): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(6,9): error TS2503: Cannot find namespace 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(6,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(7,9): error TS2503: Cannot find namespace 'G'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(7,15): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(8,9): error TS2304: Cannot find name 'K'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(8,11): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(11,16): error TS2304: Cannot find name 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(11,18): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(14,16): error TS2304: Cannot find name 'F'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(14,18): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts (18 errors) ====
    class C extends A<T> implements B<T> {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~
!!! error TS2304: Cannot find name 'T'.
                                    ~
!!! error TS2304: Cannot find name 'B'.
                                      ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    var v1: C<T>;
            ~~~~
!!! error TS2315: Type 'C' is not generic.
              ~
!!! error TS2304: Cannot find name 'T'.
    var v2: D<T> = null;
            ~
!!! error TS2304: Cannot find name 'D'.
              ~
!!! error TS2304: Cannot find name 'T'.
    var v3: E.F<T>;
            ~
!!! error TS2503: Cannot find namespace 'E'.
                ~
!!! error TS2304: Cannot find name 'T'.
    var v3: G.H.I<T>;
            ~
!!! error TS2503: Cannot find namespace 'G'.
                  ~
!!! error TS2304: Cannot find name 'T'.
    var v6: K<T>[];
            ~
!!! error TS2304: Cannot find name 'K'.
              ~
!!! error TS2304: Cannot find name 'T'.
    
    
    function f1(a: E<T>) {
                   ~
!!! error TS2304: Cannot find name 'E'.
                     ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    function f2(): F<T> {
                   ~
!!! error TS2304: Cannot find name 'F'.
                     ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    